<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="10dp">

    <TextView
        android:id="@+id/textViewGuess"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="41dp"
        android:text="@string/str_guess_the_number"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewScore"
        android:layout_width="61dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="261dp"
        android:layout_marginTop="43dp"
        android:text="@string/str_score"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewScoreNumber"
        android:layout_width="48dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="334dp"
        android:layout_marginTop="44dp"
        android:text="@string/str_0"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="111dp"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/buttonGuess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="268dp"
        android:layout_marginTop="107dp"
        android:text="@string/str_guess" />

    <ProgressBar
        android:id="@+id/progressBarAttempt"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="201dp"
        android:layout_height="68dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="187dp" />

    <TextView
        android:id="@+id/textViewAttemptScore"
        android:layout_width="64dp"
        android:layout_height="52dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="281dp"
        android:layout_marginTop="190dp"
        android:text="0"
        android:textSize="30sp"
        android:textAppearance="@style/TextAppearance.AppCompat"/>

    <TextView
        android:id="@+id/textViewMessage"
        android:layout_width="355dp"
        android:layout_height="52dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="270dp"
        android:text="@string/str_message"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="25sp" />

    <ListView
        android:id="@+id/listViewAttempts"
        android:layout_width="match_parent"
        android:layout_height="377dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="333dp" />
</RelativeLayout>